fix pom issues